añade seccion sobre empresa en lp

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,12 +47,8 @@
     z-index: 100;
     height: auto; 
     position: fixed;
-    transition: height 1s ease
 }
-.header.shrink {
-  transition: height 1s ease
 
-}
 
 
 .menu{
@@ -66,13 +62,13 @@
 .logo{
     height: 100px;
     margin: 10% 15% 10% 0;
-    transition: height 1s ease
+    transition: height .3s ease
 }
 
 .header.shrink .logo {
   height: 70px;  
   margin: 5px 15% 5px 0;
-  transition: height 1s ease
+  transition: height .3s ease
 
 }
 
@@ -167,9 +163,9 @@ padding: auto;
 
 .heroContainer {
         background: url("../assets/heroPrueba.jpg") center center / cover no-repeat;
-        margin-top: 8%;
+        margin-top: 10%;
         width: 100%;
-        height: 90vh;
+        height: 85vh;
         position: relative;
     }
 
@@ -262,10 +258,12 @@ padding: auto;
     padding: 0 7%
 }
 
+
+
 .waves {
     position: relative;
     width: 100%;
-    height: 20vh;
+    height: 1vh;
     margin-bottom: -7px;
     /*Fix for safari gap*/
     min-height: 100px;
@@ -274,7 +272,7 @@ padding: auto;
   
   .content {
     position: relative;
-    height: 20vh;
+    height: 1vh;
     text-align: center;
     background-color: white;
   }
@@ -337,11 +335,10 @@ padding: auto;
     height: 60vh;
     background: rgb(11,113,195);
   /*background: linear-gradient(0deg, rgba(11,113,195,1) 30%, rgba(34,126,201,1) 36%, rgba(57,139,207,1) 42%, rgba(87,157,214,1) 50%, rgba(129,181,224,1) 61%, rgba(163,201,232,1) 70%, rgba(186,214,238,1) 76%, rgba(201,223,242,1) 80%, rgba(246,250,253,1) 92%, rgba(255,255,255,1) 100%);*/
-
   display: flex;
-  
-  
 }
+
+
 
 .contenidoInfoDescuento{
   width: 100%;
@@ -356,6 +353,7 @@ padding: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 30px
 }
 
 .gifPrueba{
@@ -364,6 +362,14 @@ padding: auto;
 
 .textoDescuento{
   width: 450px;
+}
+
+.divisionHeroDescuento{
+  display: inline-block;
+  background-color: white;
+  width: 20%;
+  height: 2px;
+  margin-bottom: 20px;
 }
 
 .tituloDescuento{
@@ -412,8 +418,8 @@ strong{
 }
 
 .iconWhats {
-  height: 1.7rem;     
-  width: 1.7rem;
+  height: 1.9rem;     
+  width: 1.9rem;
   margin-right: 8px;
   vertical-align: middle;
   position: relative;
@@ -455,4 +461,92 @@ strong{
 	height: 100%;
 	opacity: 1;
 	border-color: #20c05a;
+}
+
+.sobreEmpresaLp{
+  width: auto;
+  height: 80vh;
+  background-color: white;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.imagenTrabajando{
+  height: 60vh;
+  border-radius: 5%;
+  border: 4px solid white;
+  box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+
+}
+
+.contenidoSobreEmpresaLp{
+  width: 38vw;
+}
+
+.divisionSobreEmpresa{
+display: inline-block;
+background-color: rgb(11,113,195);
+width: 20%;
+height: 2px;
+margin-bottom: 20px;
+}
+
+.tituloSobreEmpresa{
+font-family: "Open Sans", sans-serif;
+font-weight: 700;
+color: black;
+font-size: 2rem;
+margin-bottom: 30px;
+}
+
+.quote-divider {
+  border-left: 4px solid rgb(11,113,195); 
+  padding-left: 10px; 
+  margin-left: 20px; 
+}
+.infoTextoSobreEmpresa{
+
+  font-family: "Montserrat", serif;  
+  color: black;
+  font-size: 1.2rem;
+  font-weight: 100;
+  margin-bottom: 30px;
+
+}
+
+
+.botonLeerMas {
+  margin-top: 10px;
+	background-image: linear-gradient(to right, rgb(11,113,195) 50%, rgb(79, 159, 224) 50%);
+	background-size: 200%;
+	transition: .4s ease-out;
+  width: 150px;
+  height: 50px;
+  border: none;
+
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1rem;
+  color: white;
+	position: relative;
+	z-index: 2;
+}
+
+.botonLeerMas:hover {
+	background-position: right;
+  transform: scale(1.05);
+
+}
+
+.botonLeerMas::after {
+  content: ">";
+  display: inline-block;
+  margin-left: 8px;
+  opacity: 0; /* Invisible por defecto */
+  transition: opacity 0.3s ease;
+}
+
+.botonLeerMas:hover::after {
+  opacity: 1; /* Se vuelve visible al pasar el mouse */
 }
