--- a/styles/style.css
+++ b/styles/style.css
@@ -169,7 +169,7 @@ padding: auto;
     }
 
 .heroContainer {
-        background: url("../assets/heroPrueba.jpg") center center / cover no-repeat;
+        background: url("../assets/hero.jpg") center center / cover no-repeat;
         margin-top: 10%;
         width: 100%;
         height: 85vh;
@@ -580,7 +580,7 @@ background-color: aliceblue;
 .serviciosContenedor{
   height: auto;
   width: 100%;
-  background-color: aliceblue;
+  background-color: #f0f8ff;
 }
 
 .serviciosLista{
@@ -596,4 +596,111 @@ background-color: aliceblue;
   width: 300px;
   height: 400px;
   margin-bottom: 30px;
+}
+
+
+.footer{
+  height: auto;
+  background: rgb(11,113,195);
+    width: auto;
+}
+
+.contenidoFooter{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.informacionFooter{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-content: center;
+}
+
+.logoFooter{
+  height: 100px;
+  width: 150px;
+  padding-top: 20px;
+}
+
+.informacionContenido{
+  display: flex;
+  gap: 70px;
+}
+
+.descripcionFooter{
+}
+
+
+.categoriaFooter{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+
+}
+
+.iconoFooter{
+  height: 40px;
+}
+
+.textoFooter{
+  font-family: "Montserrat", serif;  
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.textoDescripcionFooter{
+  margin-top: 10px;
+  font-family: "Montserrat", serif;  
+  color: white;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 25px;
+  padding-left: 10px;
+}
+
+.redes{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.textoRedes{
+font-family: "Montserrat", serif;  
+color: white;
+font-size: 1.5rem;
+font-weight: 600;
+margin-top: 20px;
+margin-bottom: 30px;
+}
+
+.rssIcon{
+  height: 40px;
+  padding: 0 20px 0 20px;
+  margin-bottom: 20px;
+}
+
+.ubicacionMapa{
+
+padding: 2rem;
+border-radius: 50px;
+}
+
+.copyrightField{
+  height: 3.5rem;
+  background-color: rgb(145, 143, 143);
+  width: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.textoCopyright{
+font-family: "Roboto", sans-serif;
+color: white;
+font-size: 1rem;
+font-weight: 100;
+padding-top: 1.2rem;
 }
