--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 :root{
     --fuente-montserrat:font-family: "Montserrat", serif;
     --fuente-krona:  font-family: "Krona One", serif;
@@ -66,8 +67,8 @@
 
 
 .logo{
-    height: 100px;
-    margin: 10% 15% 10% 0;
+    height: 90px;
+    margin: 5% 15% 5% 0;
     transition: height .3s ease
 }
 
@@ -101,11 +102,17 @@ padding: auto;
     align-items: center; 
     text-decoration: none;
     color: #444444;
+    transition-duration: .5s;
 }
 
 .menuLink:hover{
     color: #BBA030;
     transition-duration: .7s;
+}
+
+.header.shrink .menuLink {
+  transform: scale(.8);
+  transition-duration: .5s;
 }
 
 .listaServicios{
@@ -168,9 +175,12 @@ padding: auto;
         background-color: white;
     }
 
+.header-spacer{
+  height: 104.969px;
+}
+
 .heroContainer {
         background: url("../assets/hero.jpg") center center / cover no-repeat;
-        margin-top: 10%;
         width: 100%;
         height: 85vh;
         position: relative;
@@ -681,6 +691,10 @@ margin-bottom: 30px;
   height: 40px;
   padding: 0 20px 0 20px;
   margin-bottom: 20px;
+}
+
+.rssIcon:hover{
+  transform: scale(1.1);
 }
 
 .ubicacionMapa{
