--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -116,8 +116,10 @@
 }
 
 #botonContactanos{
-    border-radius: 5%;
+    border-radius: 5px;
     border-top-right-radius: 20%;
     border-bottom-left-radius:20%;
     text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1rem;
 }
