--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -36,7 +36,7 @@ form{
     border-radius: 30px;
     padding-left: 60px;
     padding-top: 10px;
-    padding-bottom: 40px;
+    padding-bottom: 60px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
     margin-right: 100px;
     margin-top: 60px;
@@ -93,10 +93,13 @@ input::placeholder,textarea::placeholder{
     width: 11vw;
     font-family: "Open Sans", sans-serif;
     font-size: .9rem;
-    font-weight: 200;
+    font-weight: 600;
     height: 30px;
     margin-top: 40px;
     margin-left: 30px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    color: rgb(142, 142, 142);
+
 }
 
 .enviar:hover{
