--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -47,30 +47,44 @@
     width: 250px;
     height: 200px;
     margin-bottom: 30px;
-    background-image: url("/assets/servicios.jpg");
+    background-image: url("/assets/descuentos.jpg");
     background-size: cover;
-    border-radius: 50px;
+    border-radius: 30px;
     border-style: none;
     background-repeat:no-repeat ;
     background-position: center;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.3);
+
+  }
+
+ 
+  .serviciosSeccion::before{
+    position: absolute;
+    content: "";
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 30px;
+    z-index: 0;
+    width: 250px;
+    height: 200px;
   }
   
   .serviciosSeccion:hover{
-    transform: scale(1.02);
-    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    transform: scale(1.05);
+    box-shadow: 5px 10px 10px rgba(0,0,0,0.4);
   }
   
   .serviciosSeccion:hover::before{
     position: absolute;
     content: "";
     inset: 0;
-    background-color: rgba(255, 255, 255, 0.33);
-    border-radius: 50px;
+    background-color: rgba(0, 0, 0, 0.33);
+    border-radius: 30px;
     z-index: 0;
   }
+
 
   .contactanosServiciosContainer{
     padding: 5%;
