--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,7 @@ padding: auto;
 }
 
 .heroTitulo{
-    color: white;
+    color: rgba(255, 255, 255, .9);
     font-family: "Roboto Slab", serif;
     font-size: 4.5rem;
     letter-spacing: 3px;
@@ -359,7 +359,7 @@ padding: auto;
 }
 
 .tituloDescuento{
-font-family: "Open Sans", sans-serif;
+  font-family: "Krona One", sans-serif;
 font-weight: 700;
 color: white;
 font-size: 2rem;
@@ -568,14 +568,18 @@ background-color: rgb(250, 250, 250);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 15px 200px 30px 200px;
+  padding: 50px 20px 50px 20px;
+  gap: 30px;
+}
+
+a{
+  text-decoration: none;
 }
 
 .servicios{
   width: 420px;
   height: 200px;
   margin-bottom: 30px;
-  background-image: url("/assets/servicios.jpg");
   background-size: cover;
   border-radius: 50px;
   border-style: none;
@@ -583,19 +587,31 @@ background-color: rgb(250, 250, 250);
   background-position: center;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.3);
 }
+
+.servicios::before{
+  position: absolute;
+  content: "";
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: 50px;
+  z-index: 0;
+  width: 420px;
+  height: 200px;
+}
+
 
 .servicios:hover{
   transform: scale(1.02);
-  box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+  box-shadow: 5px 10px 10px rgba(0,0,0,0.4);
 }
 
 .servicios:hover::before{
   position: absolute;
   content: "";
   inset: 0;
-  background-color: rgba(255, 255, 255, 0.33);
+  background-color: rgba(0, 0, 0, 0.33);
   border-radius: 50px;
   z-index: 0;
 }
@@ -603,10 +619,10 @@ background-color: rgb(250, 250, 250);
 .textoServiciosLista{
   position: relative;
   color: rgba(255, 255, 255);
-  padding-bottom: 20px;
   font-family: "Montserrat", serif;  
-  font-size: .9rem;
+  font-size: 1.8rem;
   font-weight: 600;
+  text-align: center;
 }
 
 
@@ -641,8 +657,7 @@ background-color: rgb(250, 250, 250);
   gap: 70px;
 }
 
-.descripcionFooter{
-}
+
 
 
 .categoriaFooter{
