--- a/styles/style.css
+++ b/styles/style.css
@@ -644,20 +644,23 @@ a{
   flex-direction: column;
   gap: 30px;
   align-content: center;
+  justify-content: center;
 }
 
-.logoFooter{
-  height: 100px;
-  width: 150px;
-  padding-top: 20px;
-}
 
 .informacionContenido{
+  padding-top: 3vh;
   display: flex;
-  gap: 70px;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 800px;
 }
 
+.descripcionFooter{
 
+  padding: 0 50px;
+  
+}
 
 
 .categoriaFooter{
@@ -689,6 +692,19 @@ a{
   padding-left: 10px;
 }
 
+#textoDescripcionFooter1{
+  text-align: center;
+}
+
+#textoDescripcionFooterAnticipo{
+  text-decoration: underline;
+}
+
+.footerPagos{
+  display: flex;
+  justify-content: center;
+}
+
 .redes{
   display: flex;
   flex-direction: column;
@@ -716,8 +732,8 @@ margin-bottom: 30px;
 
 .ubicacionMapa{
 
-padding: 2rem;
 border-radius: 50px;
+box-shadow: 0px 1px 6px rgba(0,0,0,0.3);
 
 }
 
@@ -730,9 +746,17 @@ border-radius: 50px;
 }
 
 .textoCopyright{
+text-decoration: none;
 font-family: "Roboto", sans-serif;
-color: white;
+color: white; 
 font-size: 1rem;
 font-weight: 100;
 padding-top: 1.2rem;
+}
+
+.linkCopyright{
+  text-decoration: none;
+  color: white; 
+  font-weight: 300;
+
 }
