--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -30,7 +30,8 @@ main{
 }
 
 form{
-    height: 55vh;
+    box-sizing: content-box;
+    height: 55%;
     width: 20vw;
     background-color: white;
     border-radius: 30px;
@@ -38,7 +39,7 @@ form{
     padding-top: 10px;
     padding-bottom: 60px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
-    margin-right: 100px;
+    margin-right: 60px;
     margin-top: 60px;
 }
 
@@ -72,7 +73,7 @@ input{
     background-color: rgb(231, 230, 230);
     border-radius: 10px;
     border-style: none;
-    width: 210px;
+    width: 70%;
 }
 
 input::placeholder,textarea::placeholder{
@@ -90,13 +91,11 @@ input::placeholder,textarea::placeholder{
 }
 
 .enviar{
-    width: 11vw;
     font-family: "Open Sans", sans-serif;
     font-size: .9rem;
     font-weight: 600;
     height: 30px;
     margin-top: 40px;
-    margin-left: 30px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
     color: rgb(142, 142, 142);
 
@@ -186,4 +185,64 @@ transition-duration: 1s;
   50% { transform: rotate(0eg); }
   75% { transform: rotate(-5deg); }
   100% { transform: rotate(0deg); }
+}
+
+/* Responsive */
+
+@media (max-width:1200px){
+    .enviar{
+    margin-left: 2%;
+}
+}
+
+@media (max-width:1000px){
+    .enviar{
+
+        font-size: .7rem;
+}
+}
+
+@media (max-width:768px){
+
+    .contactoBoxUno{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 2%;
+    }
+
+    .contactoInformacionTexto{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+
+    }
+
+    .contactoInformacionDescripcion{
+        padding: 3% 0 0 0;
+    }
+
+    .contactoInformacionEmpresa{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+    }
+
+    form{
+        margin-right: 0;
+        width: 60vw;
+    }
+
+    #noShow{
+        display: none;
+    }
+
+    .textoSiguenos{
+        text-align: center;
+    }
+
+
 }
