--- a/styles/nosotros.css
+++ b/styles/nosotros.css
@@ -1,20 +1,17 @@
 
-.body{
-    box-sizing: border-box;
-    width: 100vw;
-}
-
 .nosotrosBoxUno{
     height: 60vh;
     background-color: rgb(250, 250, 250);
     display: flex;
     justify-content: space-evenly;
-    padding: 3%;
+    padding: 3% 0;
+    width: 100%;
 }
 
 .nosotrosContenido{
     width: 30vw;
-    height: 45vh;
+    height: auto;
+    padding: 2% 0;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -51,6 +48,7 @@
     border-radius: 8%;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
     border: 4px solid white;
+
 
 }
 
@@ -123,4 +121,31 @@
     text-align: center;
     font-family: "Open Sans", sans-serif;
     font-size: 1rem;
+}
+
+/* Responsive */
+
+@media (max-width:1275px){
+    .nosotrosBoxUno{
+        flex-direction: column;
+        height: auto;
+        padding: 5% 0;
+        align-items: center;
+        width: 100%;
+    }
+
+    .nosotrosContenido{
+        width: 80vw;}
+
+    .sobreNosotrosImagenUno{
+        margin-top: 4%;
+        width: 300px;
+        height: auto;
+    }
+
+    .listaMisionVisionValores{
+        display: flex;
+        flex-direction: column;
+        gap: 5vh;
+    }
 }
