--- a/styles/style.css
+++ b/styles/style.css
@@ -227,7 +227,7 @@ padding: auto;
     }
 
 .header-spacer{
-  height: 104.969px;
+  height: 110px;
 }
 
 .heroContainer {
@@ -806,7 +806,7 @@ font-family: "Roboto", sans-serif;
 color: white; 
 font-size: 1rem;
 font-weight: 100;
-padding: 2rem 0 2rem 0;
+margin: 1.5rem 0 1.5rem 0;
 padding: 0 1%;
 }
 
@@ -919,6 +919,10 @@ width: 100%;
 }
 
 .menuLinkServiciosDropdown{
+  display: none;
+}
+
+.listaServicios:hover .menuLinkServiciosDropdown {
   display: none;
 }
 
