--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -95,10 +95,8 @@ input::placeholder,textarea::placeholder{
     font-size: .9rem;
     font-weight: 600;
     height: 30px;
-    margin-top: 40px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
     color: rgb(142, 142, 142);
-
 }
 
 .enviar:hover{
@@ -146,6 +144,7 @@ transition-duration: 1s;
     font-weight: 400;
     line-height: 1.3rem;
     text-align: justify;
+    text-decoration: none;
     
 }
 
@@ -245,4 +244,12 @@ transition-duration: 1s;
     }
 
 
+}
+
+@media (max-width:350px){
+    .iconosRedes{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
